--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
   "main": "index.js",
   "scripts": {
     "client": "cd ../client && npm start",
-    "server": "./node_modules/.bin/nodemon server.js --ignore '*.json",
+    "server": "./node_modules/.bin/nodemon server.js --ignore 'initializeDb.js",
     "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
   },
   "dependencies": {
