--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,13 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "express-validator": "*",
     "json-query": "^2.2.2",
     "oracledb": "^3.1.2",
+    "passport": "*",
+    "passport-http": "*",
+    "passport-local": "*",
     "underscore": "^1.9.1"
   },
   "devDependencies": {
