--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@babel/core": "7.1.6",
     "@svgr/webpack": "2.4.1",
+    "ag-grid-community": "^20.1.0",
+    "ag-grid-react": "^20.1.1",
     "axios": "^0.18.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
