--- a/server/package.json
+++ b/server/package.json
@@ -21,8 +21,9 @@
     "passport": "*",
     "passport-http": "*",
     "passport-local": "*",
-    "underscore": "^1.9.1",
-    "pg": "*"
+    "pg": "*",
+    "pg-format": "^1.0.4",
+    "underscore": "^1.9.1"
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
