--- a/package.json
+++ b/package.json
@@ -1,17 +1,37 @@
 {
-    "name": "Golf",
-    "version": "1.0.0",
-    "description": "This example is so cool.",
-    "main": "server/server.js",
-    "scripts": {
-        "heroku-prebuild": "cd server && npm run installClient && npm install",
-        "heroku-postbuild": "cd server && npm run buildClient",
-        "start": "node ./server/server.js"
-    },
-    "keywords": [
-      "golf",
-      "heroku"
-    ],
-    "author": "jane-doe",
-    "license": "MIT"
+  "name": "biggi_server",
+  "version": "0.1.0",
+  "author": "Birgir Pálsson",
+  "license": "UNLICENSED",
+  "private": true,
+  "description": "Node.js server",
+  "main": "index.js",
+  "scripts": {
+    "devClient": "cd client && npm start",
+    "buildClient": "cd client && node scripts/build.js",
+    "installClient": "cd client && npm install",
+    "server": "./node_modules/.bin/nodemon server.js",
+    "start": "node server.js",
+    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run devClient\"",
+    "heroku-prebuild": "npm run installClient",
+    "heroku-postbuild": "npm run buildClient"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "express-validator": "*",
+    "json-query": "^2.2.2",
+    "oracledb": "^3.1.2",
+    "passport": "*",
+    "passport-http": "*",
+    "passport-local": "*",
+    "pg": "*",
+    "pg-format": "^1.0.4",
+    "underscore": "^1.9.1"
+  },
+  "devDependencies": {
+    "concurrently": "^4.1.0",
+    "nodemon": "^1.18.9"
   }
+}
