--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "passport-local": "*",
     "pg": "*",
     "pg-format": "^1.0.4",
+    "react-semantic-ui-datepickers": "0.0.0-semantically-released",
     "underscore": "^1.9.1"
   },
   "devDependencies": {
