--- a/client/package.json
+++ b/client/package.json
@@ -59,6 +59,7 @@
     "react-dev-utils": "^7.0.1",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
+    "recharts": "^1.5.0",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
     "semantic-ui-calendar-react": "^0.14.4",
