--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "devClient": "cd client && npm start",
     "buildClient": "cd client && node scripts/build.js",
     "installClient": "cd client && npm install",
-    "server": "./node_modules/.bin/nodemon server.js -i client/",
+    "server": "./node_modules/.bin/nodemon server.js -i client/ -i session-store",
     "start": "node server.js",
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run devClient\"",
     "heroku-prebuild": "npm run installClient",
@@ -29,6 +29,7 @@
     "pg": "*",
     "pg-format": "^1.0.4",
     "pg-promise": "^8.6.4",
+    "session-file-store": "^1.2.0",
     "underscore": "^1.9.1"
   },
   "devDependencies": {
