--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "connect-mongo": "^2.0.3",
+    "connect-pg-simple": "^5.0.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "express-validator": "*",
