--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "heroku-postbuild": "npm run buildClient"
   },
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "body-parser": "^1.18.3",
     "connect-mongo": "^2.0.3",
     "connect-pg-simple": "^5.0.0",
