--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
     "@svgr/webpack": "2.4.1",
     "ag-grid-community": "^20.1.0",
     "ag-grid-react": "^20.1.1",
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
@@ -68,7 +68,7 @@
     "style-loader": "0.23.0",
     "terser-webpack-plugin": "1.1.0",
     "url-loader": "1.1.1",
-    "webpack": "4.19.1",
+    "webpack": "^4.43.0",
     "webpack-dev-server": "3.1.14",
     "webpack-manifest-plugin": "2.0.4",
     "workbox-webpack-plugin": "3.6.3"
