--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "pg": "*",
     "pg-format": "^1.0.4",
     "pg-promise": "^8.6.4",
+    "sendgrid": "^5.2.3",
     "session-file-store": "^1.2.0",
     "underscore": "^1.9.1"
   },
