--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,6 @@
 {
-  "proxy": "http://localhost:5000/",
+  "proxy": "http://127.0.0.1:5000/",
+  "secure": false,
   "name": "biggi_client",
   "version": "0.1.0",
   "author": "Birgir Pálsson",
@@ -55,7 +56,7 @@
     "postcss-safe-parser": "4.0.1",
     "react": "^16.7.0",
     "react-app-polyfill": "^0.2.0",
-    "react-bootstrap": "^1.0.0-beta.5",
+    "react-bootstrap": "^1.4.0",
     "react-dev-utils": "^7.0.1",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
@@ -69,7 +70,7 @@
     "terser-webpack-plugin": "1.1.0",
     "url-loader": "1.1.1",
     "webpack": "^4.43.0",
-    "webpack-dev-server": "3.1.14",
+    "webpack-dev-server": "^3.11.0",
     "webpack-manifest-plugin": "2.0.4",
     "workbox-webpack-plugin": "3.6.3"
   },
